AMBARI-24692 - JDK 11 support for Log Search (#2843)